[gd_scene load_steps=3 format=3 uid="uid://bt5wcmt2pnsr8"]

[ext_resource type="Script" path="res://Temp_Title.gd" id="1_m1tc2"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sbqom"]

[node name="main" type="Node2D"]
script = ExtResource("1_m1tc2")

[node name="Button" type="Button" parent="."]
offset_left = 384.0
offset_top = 213.0
offset_right = 734.0
offset_bottom = 348.0
text = "START GAME "
icon = SubResource("CompressedTexture2D_sbqom")

[node name="Button2" type="Button" parent="."]
offset_left = 385.0
offset_top = 414.0
offset_right = 735.0
offset_bottom = 549.0
text = "END GAME "

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 183.0
offset_top = 28.0
offset_right = 369.0
offset_bottom = 76.0
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 3.15
theme_override_colors/default_color = Color(0.34902, 0.698039, 1, 1)
text = "Ascent Into Madness!!!!!!!1"
autowrap_mode = 0
tab_size = 6

[node name="Button3" type="Button" parent="."]
offset_left = 968.0
offset_top = 581.0
offset_right = 1140.0
offset_bottom = 638.0
text = "SETTINGS"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
